# rich-gradient

./: .gitignore  404.html  LICENSE  README.md  __init__.py  colors.json  cspell.json  index.html  markdownlint.jsonc  mkdocs.yml  objects.inv  pypi-stats.json  pyproject.toml
$HOME/.config/markdownlint/: .markdownlint.jsonc
.github/: copilot-instructions.md
CHANGELOG/: index.html
animated_gradient_ref/: index.html
animated_panel_ref/: index.html
animated_text_ref/: index.html
animation/: index.html
assets/badges/: rich-badge.ai  rich-v1.json
base_gradient_ref/: index.html
cli/: index.html
config/: codex.sqlite3  secret_key
configuration/: index.html
docs/: CHANGELOG.md  animated_gradient_ref.md  animated_panel_ref.md  animated_text_ref.md  animation.md  cli.md  configuration.md  gradient.md  index.md  panel.md  panel_ref.md  rule.md  spectrum.md  text.md
docs/img/: gradient_table_example.ai
docs/styles/: extra.css  style.css
examples/: animated_text_demo.py  cli.md  cli_help.py  getting_started.py  gradient_showcase.py  hello_world.py  panel_showcase.py  rich_gradient_cli.py  rule_gallery.py  spectrum_overview.py  text_backgrounds.py  text_palettes.py  text_quickstart.py  text_rainbow.py
gradient/: index.html
gradient_ref/: index.html
gradient_rule_ref/: index.html
panel/: index.html
panel_ref/: index.html
rule/: index.html
rule_ref/: index.html
scripts/: copy.js
search/: search_index.json
site/: index.html  objects.inv
site/CHANGELOG/: index.html
site/color_ref/: index.html
site/gradient_ref/: index.html
site/gradient_rule_ref/: index.html
site/rule_ref/: index.html
site/search/: search_index.json
site/text/: index.html
site/text_ref/: index.html
spectrum/: index.html
spectrum_ref/: index.html
src/rich_gradient/: __init__.py  _animated_gradient.py  _base_color.py  _base_gradient.py  _color_data.py  _color_ext.py  _colors.py  _colors_by_.py  _colors_dict.py  _contrast.py  _gradient.py  _helper.py  _highlight.py  _logger.py  _parsers.py  _rgba.py  _rule.py  _simple_gradient.py  animated_gradient.py  animated_markdown.py  animated_panel.py  animated_rule.py  animated_text.py  box_highlighter.py  cli.py  cli_prompt.md  color.py  config.py  default_styles.py  gradient.py  lolcat.py  main.py  markdown.py  new_colors.py  panel.py  rule.py  spectrum.py  style.py  text.py  theme.py
src/rich_gradient/_cli/: common.py  panel.py  ❯ rich-gradient panel --help.md
src/rich_gradient/archive/: __init__.py  spectrum.py
src/rich_gradient/cli/: __init__.py  __main__.py  common.py  markdown_command.py  panel_command.py  rule_command.py  text_command.py
src/rich_gradient/depreciated/: _simple_gradient.py  gradient.py
src/rich_gradient/examples/: example_gradient.py
styles/: style.css
tests/: conftest.py  test__simple_gradient.py  test_animated_panel.py  test_animated_text.py  test_animation.py  test_cli.py  test_config.py  test_edge_cases.py  test_gradient.py  test_markdown.py  test_rule.py  test_spectrum.py  test_text.py  test_theme.py
text/: index.html
text_ref/: index.html
theme_ref/: index.html
tmp_dl/: rich_click-1.9.4-py3-none-any.whl  rich_color_ext-0.1.9-py3-none-any.whl
