[project]
name = "rich-gradient"
description = "A gradient generator for the Rich library."
readme = "README.md"
authors = [{ name = "Max Ludden", email = "dev@maxludden.com" }]
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7.3",
    "rich>=14.0.0",
    "rich-color-ext>=0.1.4",
    "typer>=0.19.2,<0.20",
]
dynamic = ["version"]


[project.urls]
Homepage = "https://github.com/maxludden/rich-gradient"
Documentation = "https://maxludden.github.io/rich-gradient"
Repository = "https://github.com/maxludden/rich-gradient"
Issues = "https://github.com/maxludden/rich-gradient/issues"
Changelog = "https://maxludden.github.io/rich-gradient/CHANGELOG/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.7",
    "mkdocstrings>=0.29.0",
    "mkdocstrings-python>=1.16.5",
    "pytest>=8.3.5",
    "pytest-benchmark>=5.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rich_gradient"]

[tool.hatch.version]
path = "src/rich_gradient/__init__.py"

[project.scripts]
rich-gradient = "rich_gradient.cli:main"


[tool.ruff]
ignore = [
    "F401", # Unused imports
    "E741", # Ambiguous variable name
]
