[project]
name = "rich-gradient"
description = "A gradient generator for the Rich library."
readme = "README.md"
authors = [{ name = "Max Ludden", email = "maxludden@me.com" }]
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7.3",
    "rich>=14.0.0",
    "rich-color-ext>=0.1.9",
    "rich-click>=1.9.4",
    "typer>=0.19.2,<0.22",
]
dynamic = ["version"]


[project.urls]
Homepage = "https://github.com/maxludden/rich-gradient"
Documentation = "https://maxludden.github.io/rich-gradient"
Repository = "https://github.com/maxludden/rich-gradient"
Issues = "https://github.com/maxludden/rich-gradient/issues"
Changelog = "https://maxludden.github.io/rich-gradient/CHANGELOG/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
config = ["pydantic-settings>=2.11.0"]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.7",
    "mkdocstrings>=0.29.0",
    "mkdocstrings-python>=1.16.5",
    "pytest>=8.3.5",
    "pytest-benchmark>=5.1.0",
]
toml = ["tomlkit>=0.13.3"]

[tool.hatch.build.targets.wheel]
packages = ["src/rich_gradient"]

[tool.hatch.version]
path = "src/rich_gradient/__init__.py"

[project.scripts]
gradient = "rich_gradient.cli:app"
rich-gradient = "rich_gradient.cli:app"

[tool.ruff]
ignore = [
    "F401", # Unused imports
    "E741", # Ambiguous variable name
]

[tool.pylint.MESSAGES_CONTROL]
disable = [
    "C0103",                      # Variable name does not conform to snake_case
    "E0611",                      # No name in module
    "W0611",                      # Unused import
    "W0603",                      # allow `global` statement
    "W1401",                      # Anomalous backslash in string
    "R0914",                      # Too many local variables
]

[tool.markdownlint]
disable = [
    "MD033", # Inline HTML
    "MD026", # Trailing punctuation in heading
]
